tests/paczka1/small_fuzzy/85190352.err
Error in line 1: 8l6CW A614 42,5
Error in line 2: cHal A341 62,8
Error in line 3: 8l6CW A341 91,3
Error in line 5: jG8tMyh A341 12,7
Error in line 9: jG8tMyh A524 55,5
